# taowry

./: .gitignore  .npmignore  Cargo.toml  README.md  build.sh  package.json  tsconfig.json  常见问题及解决方案.md
.github/workflows/: build.yml
.qoder/specs/: architecture-refactor.md  rpc-communication-refactor.md
examples/: ipc_test.rs  ipc_test2.rs  ipc_test3.rs  ipc_test4.rs  ipc_test5.rs
examples/custom-protocol-assets/: README.md
examples/custom-protocol-assets/src/: index.ts
examples/custom-protocol-views/: build-assets.ts
examples/custom-protocol-views/frontend/: index.html
examples/custom-protocol:assets/: package.json
examples/custom-protocol:views/: assets.ts  package.json
examples/custom-protocol:views/src/: index.ts
examples/localhost-http/: package.json  tsconfig.json
examples/localhost-http/src/: index.ts
scripts/: postinstall.js
src/rs/: application.rs  channel.rs  command.rs  dock.rs  event.rs  lib.rs  listen.rs  main.rs  menu_manager.rs  protocol.rs  rpc.rs  tray_events.rs  utils.rs  window.rs  window_builder.rs
src/rs/napi_api/: app_napi.rs  dock_napi.rs  helpers.rs  menu_napi.rs  mod.rs  monitor_napi.rs  tray_napi.rs  utils_napi.rs  window_napi.rs
src/ts/: app.ts  client.ts  event-bus.ts  index.ts  menu.ts  native-module.ts  rpc-types.ts  tray.ts  types.ts  utils.ts  window.ts
src/ts/__tests__/: event-bus-advanced.test.ts  event-bus.test.ts  menu.test.ts  native-module.test.ts  rpc-bridge.test.ts
test/: app.tsx  index.html  index.ts
