[package]
name = "taowry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/rs/lib.rs"

[dependencies]
napi = { version = "2", features = ["napi6", "serde-json"] }
napi-derive = "2"
base64 = "0.22"
image = "0.25.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tao = "0.30.2"
tray-icon = "0.16.0"
uuid = { version = "1", features = ["v4"] }
wry = { version = "0.55.1", features = ["devtools"] }
rfd = "0.15"
open = "5"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSDate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
